[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/UI/background one.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Play.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Exit.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Full screen.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/01.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Play.gd" type="Script" id=6]
[ext_resource path="res://scenes/Exit.gd" type="Script" id=7]
[ext_resource path="res://scenes/FullScreen.gd" type="Script" id=8]
[ext_resource path="res://SFX/Hober.ogg" type="AudioStream" id=9]
[ext_resource path="res://SFX/Click.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Click"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 38.0546 ), Vector2( 28.0616, 38.0546 ), Vector2( 48.5, 38.0546 ), Vector2( -655.167, 38.0546 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -15.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 304, 39.2438 ), Vector2( 270.326, 39.2438 ), Vector2( 255.5, 39.2438 ), Vector2( 968.537, 39.2438 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 15.0, 0.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_scene"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Hover"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 38.0546 ), Vector2( 0, 38.0546 ), Vector2( 0, 38.0546 ), Vector2( 0, 38.0546 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 30.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 304, 39.2438 ), Vector2( 304, 39.2438 ), Vector2( 304, 39.2438 ), Vector2( 304, 39.2438 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, -15.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 38.0546 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 304, 39.2438 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Click"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -76, 38.055 ), Vector2( 28.0616, 38.0546 ), Vector2( 48.5, 38.0546 ), Vector2( -655.167, 38.0546 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -15.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 304, 39.2438 ), Vector2( 270.326, 39.2438 ), Vector2( 255.5, 39.2438 ), Vector2( 968.537, 39.2438 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 15.0, 0.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "full_screen"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reset"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "Hover"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -76, 38.055 ), Vector2( 0, 38.0546 ), Vector2( 0, 38.0546 ), Vector2( -48.5, 41.802 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 30.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 380.368, 39.244 ), Vector2( 304, 39.2438 ), Vector2( 304, 39.2438 ), Vector2( 352.5, 41.802 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, -15.0, 0.0 ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -76.3675, 41.802 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 380.368, 41.802 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Click"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 38.0546 ), Vector2( 28.0616, 38.0546 ), Vector2( 48.5, 38.0546 ), Vector2( -655.167, 38.0546 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -15.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 304, 39.2438 ), Vector2( 270.326, 39.2438 ), Vector2( 255.5, 39.2438 ), Vector2( 968.537, 39.2438 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 15.0, 0.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "exit"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "Hover"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 38.0546 ), Vector2( 0, 38.0546 ), Vector2( 0, 38.0546 ), Vector2( 0, 38.0546 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 30.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 304, 39.2438 ), Vector2( 304, 39.2438 ), Vector2( 304, 39.2438 ), Vector2( 304, 39.2438 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.0, -15.0, 0.0 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 38.0546 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 304, 39.2438 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="MainUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_horizontal_guides_": [ 548.802, 643.341 ],
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -127.0
margin_right = 152.0
margin_bottom = 127.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="VBoxContainer"]
margin_right = 304.0
margin_bottom = 82.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/Play"]
position = Vector2( 0, 38.0546 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="VBoxContainer/Play"]
position = Vector2( 304, 39.2438 )
texture = ExtResource( 5 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/Play"]
anims/Click = SubResource( 1 )
anims/Hover = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Click" type="AudioStreamPlayer2D" parent="VBoxContainer/Play"]
stream = ExtResource( 10 )

[node name="Hover" type="AudioStreamPlayer2D" parent="VBoxContainer/Play"]
stream = ExtResource( 9 )

[node name="VSplitContainer3" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 304.0
margin_bottom = 86.0

[node name="VSplitContainer4" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 304.0
margin_bottom = 90.0

[node name="FullScreen" type="TextureButton" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 304.0
margin_bottom = 176.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/FullScreen"]
position = Vector2( -76.3675, 41.802 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="VBoxContainer/FullScreen"]
position = Vector2( 380.368, 41.802 )
texture = ExtResource( 5 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/FullScreen"]
anims/Click = SubResource( 10 )
anims/Hover = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="Click" type="AudioStreamPlayer2D" parent="VBoxContainer/FullScreen"]
stream = ExtResource( 10 )

[node name="Hover" type="AudioStreamPlayer2D" parent="VBoxContainer/FullScreen"]
stream = ExtResource( 9 )

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 304.0
margin_bottom = 180.0

[node name="VSplitContainer2" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 184.0
margin_right = 304.0
margin_bottom = 184.0

[node name="Exit" type="TextureButton" parent="VBoxContainer"]
margin_top = 188.0
margin_right = 304.0
margin_bottom = 270.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="VBoxContainer/Exit"]
position = Vector2( 0, 38.0546 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="VBoxContainer/Exit"]
position = Vector2( 304, 39.2438 )
texture = ExtResource( 5 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/Exit"]
anims/Click = SubResource( 7 )
anims/Hover = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="Click" type="AudioStreamPlayer2D" parent="VBoxContainer/Exit"]
stream = ExtResource( 10 )

[node name="Hover" type="AudioStreamPlayer2D" parent="VBoxContainer/Exit"]
stream = ExtResource( 9 )

[connection signal="mouse_entered" from="VBoxContainer/Play" to="VBoxContainer/Play" method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Play" to="VBoxContainer/Play" method="_on_Play_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Play" to="VBoxContainer/Play" method="_on_Play_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/FullScreen" to="VBoxContainer/FullScreen" method="_on_FullScreen_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/FullScreen" to="VBoxContainer/FullScreen" method="_on_FullScreen_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/FullScreen" to="VBoxContainer/FullScreen" method="_on_FullScreen_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Exit" to="VBoxContainer/Exit" method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Exit" to="VBoxContainer/Exit" method="_on_Exit_pressed"]
